my first commit

--- a/.vscode/Task1/Javascript/index.html
+++ b/.vscode/Task1/Javascript/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Worldgit </h1>
+    <script>
+        let name="Varunya";
+        console.log(name);
+        name="Sree";
+        console.log(name);
+    </script>
 </body>
 </html>
